Create a second HTML section and decorate with CSS

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
     <section class="container1">
         <div class="row">
-            <article class="col-12 col-md-6">
+            <article class="col-12 col-lg-6">
                 <h1>Transform Your
                     <span class="digital-future">Digital Future</span>
                 </h1>
-                <div class="row">
-                    <p class="col-12">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                <div>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
                         doloremque
                         laudantium totam
                         rem
@@ -32,7 +32,47 @@
                     <button class="play-circle">
                         <img src="./icons/play-circle.svg" class="icono-play"> <span>Watch Demo</span>
                     </button>
+                </div>
             </article>
+            <div class="row col-lg-6">
+                <img src="./img/foto1.webp">
+            </div>
+        </div>
+    </section>
+    <section class="container2">
+        <div class="row">
+            <img src="./img/foto2.webp" class="col-12 col-lg-6">
+            <article class="col-12 col-lg-6">
+                <h2>Crafting Excellence Through Innovation and Dedication</h2>
+                <p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
+                    et dolore magna
+                    aliqua.</p>
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute
+                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <article class="col-12 row-lg">
+
+                    <div class="numeros">
+                        <h3>150+</h3>
+                        <p>PROJECTS COMPLETED</p>
+                    </div>
+                    <div class="numeros">
+                        <h3>12+</h3>
+                        <p>YEARS EXPERIENCE</p>
+                    </div>
+                    <div class="numeros">
+                        <h3>98%</h3>
+                        <p>CLIENT SATISFACTION</p>
+                    </div>
+                </article>
+                <button class="discover">
+                    <span>Discover Our Story</span>
+                    <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+
+
 
         </div>
 
