make section 5 and decorate with css

--- a/index.html
+++ b/index.html
@@ -66,16 +66,231 @@
                         <p>CLIENT SATISFACTION</p>
                     </div>
                 </article>
+
                 <button class="discover">
-                    <span>Discover Our Story</span>
-                    <img src="./icons/arrow-right.svg">
+                    <span>Discover Our Story</span> <img src="./icons/arrow-right.svg" class="flecha-derecha">
                 </button>
             </article>
+        </div>
+    </section>
+    <section class="container3">
+        <div class="row">
+            <h2>Services</h2>
+            <p class="text-services">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit
+            </p>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/palette.svg" class="iconos-con3">
+                <h3>Creative Design</h3>
+                <p class="servicios">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor
+                    incididunt ut labore.
+                </p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/code-slash.svg" class="iconos-con3">
+                <h3>Web Development</h3>
+                <p class="servicios">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo.</p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/megaphone.svg" class="iconos-con3">
+                <h3>Digital Marketing</h3>
+                <p class="servicios">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla
+                    pariatur.</p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/graph-up-arrow.svg" class="iconos-con3">
+                <h3>Business Strategy</h3>
+                <p class="servicios">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim.</p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/shield-check.svg" class="iconos-con3">
+                <h3>Security Solutions</h3>
+                <p class="servicios">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                    doloremque laudantium.</p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+            <article class="col-12 col-lg-4">
+                <img src="./icons/headset.svg" class="iconos-con3">
+                <h3>24/7 Support</h3>
+                <p class="servicios">Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
+                    beatae vitae.</p>
+                <button>
+                    <span>Learn More</span> <img src="./icons/arrow-right.svg">
+                </button>
+            </article>
+        </div>
+    </section>
+    <section class="container4">
+        <div class="row">
+            <article class="col-12 col-lg-6">
+                <img src="./icons/laptop.svg" class="iconos-con4">
+                <h3>Streamlined Workflow Solution</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper
+                    mattis, pulvinar dapibus
+                    leo.</p>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Integrated development
+                        environment</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Cloud-based collaborative tools</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Automated testing procedures</span>
+                </div>
+                <img src="./img/foto3.webp" class="fotos-con4">
+            </article>
+            <article class="col-12 col-lg-6">
+                <img src="./icons/graph-up.svg" class="iconos-con4">
+                <h3>Performance Analytics</h3>
+                <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit
+                    neque, auctor sit
+                    amet aliquam vel.</p>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Real-time data visualization</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Custom report generation</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Predictive analysis models</span>
+                </div>
+                <img src="./img/foto4.webp" class="fotos-con4">
+            </article>
+            <article class="col-12 col-lg-6">
+                <img src="./icons/shield-lock.svg" class="iconos-con4">
+                <h3>Enterprise Security Framework</h3>
+                <p>Quisque velit nisi, pretium ut lacinia in, elementum id enim. Mauris blandit aliquet elit, eget
+                    tincidunt nibh pulvinar.</p>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Multi-factor authentication</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>End-to-end encryption standard</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Automated security audits</span>
+                </div>
+                <img src="./img/foto5.webp" class="fotos-con4">
+            </article>
+            <article class="col-12 col-lg-6">
+                <img src="./icons/people.svg" class="iconos-con4">
+                <h3>Collaborative Team Environment</h3>
+                <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Cras ultricies ligula sed
+                    magna dictum porta.</p>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Shared workspace functionality</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Real-time communication tools</span>
+                </div>
+                <div>
+                    <img src="./icons/check-circle.svg" class="items-con4"> <span>Progress tracking dashboards</span>
+                </div>
+                <img src="./img/foto6.webp" class="fotos-con4">
+            </article>
+        </div>
+    </section>
+    <section class="container5">
+        <div class="row">
+            <article class="col-12 col-lg-6">
+                <h2>Portfolio</h2>
+                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            </article>
+            <div>
+                <ul class="col-12 col-lg-4">
+                    <li>All Projects</li>
+                    <li>Branding</li>
+                    <li>Web Design</li>
+                    <li>Print Design</li>
+                    <li>Motion</li>
+                </ul>
+            </div>
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto7.webp">
+                <figcaption>
+                    <h3>Brand Identity</h3>
+                    <p>Corporate branding and visual identity system</p>
+                </figcaption>
+            </figure>
 
 
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto8.webp">
+                <figcaption>
+                    <h3>E-commerce Platform</h3>
+                    <p>Modern online shopping experience</p>
+                </figcaption>
+            </figure>
+
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto9.webp">
+                <figcaption>
+                    <h3>Magazine Design</h3>
+                    <p>Editorial layout and typography</p>
+                </figcaption>
+            </figure>
+
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto10.webp">
+                <figcaption>
+                    <h3>Motion Graphics</h3>
+                </figcaption>
+            </figure>
+
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto11.webp">
+                <figcaption>
+                    <h3>Logo Collection</h3>
+                    <p>Diverse brand mark explorations</p>
+                </figcaption>
+            </figure>
+
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto12.webp">
+                <figcaption>
+                    <h3>Mobile App Design</h3>
+                    <p>User-centered interface design</p>
+                </figcaption>
+            </figure>
+
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto13.webp">
+                <figcaption>
+                    <h3>Packaging Design</h3>
+                    <p>Sustainable product packaging solutions</p>
+                </figcaption>
+            </figure>
+
+            <figure class="col-12 col-lg-4">
+                <img src="./img/foto14.webp">
+                <h3>Brand Animation</h3>
+                <p>Dynamic brand identity systems</p>
+            </figure>
 
         </div>
-
     </section>
 
 </body>
