--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
                 <img src="./img/foto10.webp">
                 <figcaption>
                     <h3>Motion Graphics</h3>
+                    <p>Editorial layout and typography</p>
                 </figcaption>
             </figure>
 
@@ -286,9 +287,116 @@
 
             <figure class="col-12 col-lg-4">
                 <img src="./img/foto14.webp">
-                <h3>Brand Animation</h3>
-                <p>Dynamic brand identity systems</p>
+                <figcaption>
+
+                    <h3>Brand Animation</h3>
+                    <p>Dynamic brand identity systems</p>
+                </figcaption>
             </figure>
+        </div>
+    </section>
+    <section class="container6">
+        <div class="row">
+            <article class="col-12">
+                <h2>How We Work</h2>
+                <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+            </article>
+            <article class="col-12 col-lg-3">
+                <img src="./icons/1-circle.svg">
+                <h3>Discovery</h3>
+                <p>Understanding your business goals and requirements through in-depth analysis and consultation
+                    sessions.</p>
+            </article>
+            <article class="col-12 col-lg-3">
+                <img src="./icons/2-circle.svg">
+                <h3>Planning</h3>
+                <p>Creating detailed project roadmaps and strategies aligned with your objectives and timeline
+                    requirements.</p>
+            </article>
+            <article class="col-12 col-lg-3">
+                <img src="./icons/3-circle.svg">
+                <h3>Execution</h3>
+                <p>Implementing solutions with precision while maintaining transparent communication throughout the
+                    process.</p>
+            </article>
+            <article class="col-12 col-lg-3">
+                <img src="./icons/4-circle.svg">
+                <h3>Delivery</h3>
+                <p>Finalizing implementations and providing comprehensive support to ensure long-term success.</p>
+            </article>
+        </div>
+    </section>
+    <section class="container7">
+        <div class="row">
+            <table class="col-12 col-lg-4">
+                <tr>
+                    <td><img src="./icons/1-circle.svg" class="iconos-con7"></td>
+                    <td>
+                        <h5>Innovation</h5>
+                        <p>Creative solutions</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./icons/2-circle.svg" class="iconos-con7"></td>
+                    <td>
+                        <h5>Strategy</h5>
+                        <p>Business growth</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./icons/3-circle.svg" class="iconos-con7"></td>
+                    <td>
+                        <h5>Performance</h5>
+                        <p>Optimal results</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td><img src="./icons/4-circle.svg" class="iconos-con7"></td>
+                    <td>
+                        <h5>Integration</h5>
+                        <p>Seamless workflow</p>
+                    </td>
+                </tr>
+            </table>
+            <span class="badge rounded-pill text-bg-info">
+                <img src="./icons/lightbulb.svg"> Innovation Hub
+            </span>
+            <article>
+                <h3 class="titulo-con7">Revolutionary Design Thinking</h3>
+                <p class="p-con7">Sed ut perspiciatis unde omnis natus error sit voluptatem accusantium doloremque
+                    laudantium, totam
+                    rem aperiam eaque
+                    ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+            </article>
+            <div class="numeros2">
+                <span class="numeros2-con7">145%</span>
+                <span class="numeros2-con7">28K</span>
+            </div>
+            <div class="numeros2">
+                <span class="abajo-numero">INNOVATION RATE</span>
+                <span class="abajo-numero">IDEAS GENERATED</span>
+            </div>
+            <article class="col-12 col-lg-6">
+                <div class="items-con7">
+                    <img src="./icons/chevron-right.svg" class="items-con5"> <span>Nemo enim ipsam voluptatem quia
+                        voluptas sit</span>
+                </div>
+                <div class="items-con7">
+                    <img src="./icons/chevron-right.svg" class="items-con5"> <span>Aspernatur aut odit fugit sed quia
+                        consequuntur</span>
+                </div>
+                <div class="items-con7">
+                    <img src="./icons/chevron-right.svg" class="items-con5"> <span>Magni dolores eos qui ratione
+                        voluptatem</span>
+                </div>
+                <div class="enlace-explore">
+                    <p>Explore Innovation <img src="./icons/arrow-up-right.svg"></p>
+                </div>
+                <img src="./img/foto15.webp" class="img-final">
+
+            </article>
+
+
 
         </div>
     </section>
