finish the html testimonials section and edit the css

--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
     </section>
     <section class="container5">
         <div class="row">
-            <article class="col-12 col-lg-6">
+            <article class="col-12 col-lg-12">
                 <h2>Portfolio</h2>
                 <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
             </article>
             <div>
-                <ul class="col-12 col-lg-4">
+                <ul class="col-12 col-lg-12">
                     <li>All Projects</li>
                     <li>Branding</li>
                     <li>Web Design</li>
@@ -328,7 +328,7 @@
     </section>
     <section class="container7">
         <div class="row">
-            <table class="col-12 col-lg-4">
+            <table class="col-12 row-lg-">
                 <tr>
                     <td><img src="./icons/1-circle.svg" class="iconos-con7"></td>
                     <td>
@@ -361,8 +361,8 @@
             <span class="badge rounded-pill text-bg-info">
                 <img src="./icons/lightbulb.svg"> Innovation Hub
             </span>
-            <article>
-                <h3 class="titulo-con7">Revolutionary Design Thinking</h3>
+            <article class="col-12>
+                <h3 class=" titulo-con7">Revolutionary Design Thinking</h3>
                 <p class="p-con7">Sed ut perspiciatis unde omnis natus error sit voluptatem accusantium doloremque
                     laudantium, totam
                     rem aperiam eaque
@@ -392,12 +392,39 @@
                 <div class="enlace-explore">
                     <p>Explore Innovation <img src="./icons/arrow-up-right.svg"></p>
                 </div>
-                <img src="./img/foto15.webp" class="img-final">
-
             </article>
 
-
-
+            <div class="col-12 col-lg-6">
+                <img src="./img/foto15.webp" class="img-final">
+            </div>
+        </div>
+    </section>
+    <section class="container8">
+        <div class="row">
+            <article class="col-12 col-lg-12">
+                <h2>Testimonials</h2>
+                <p class="p-testimonials">Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur
+                    velit</p>
+            </article>
+            <article class="col-12 col-lg-6">
+                <div>
+                    <img src="./img/foto16.webp" class="fotito">
+                </div>
+                <img src="./icons/star-fill.svg"> <img src="./icons/star-fill.svg">
+                <img src="./icons/star-fill.svg"> <img src="./icons/star-fill.svg">
+                <img src="./icons/star-fill.svg">
+                <p>"Lorem ipsum dolor sit amet consecteur adipiscing elit sed do eiusmod tempor incididunt ut labore et
+                    dolore magna aliqua ut enim ad minim veniam quis nostrud" </p>
+                <h5>Amanda Wilson</h5>
+                <span>Creative Director</span>
+                <div class="chat">
+                    <img src="./icons/chat-quote.svg">
+                </div>
+            </article>
+            <div class="botones">
+                <button><img src="./icons/chevron-left.svg"></button>
+                <button><img src="./icons/chevron-right.svg"></button>
+            </div>
         </div>
     </section>
 
